base/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard-auth
  namespace: kubernetes-dashboard
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-http-gateway
      namespace: istio-ingress
  hostnames: []
  rules:
    - matches:
        - path:
            type: Exact
            value: "/api/v1/login"
        - path:
            type: Exact
            value: "/api/v1/csrftoken/login"
        - path:
            type: Exact
            value: "/api/v1/me"
      backendRefs:
        - group: ''
          kind: Service
          name: kubernetes-dashboard-addon-chart-in-cluster-hub-auth
          port: 8000
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard-api
  namespace: kubernetes-dashboard
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-http-gateway
      namespace: istio-ingress
  hostnames: []
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/api"
        - path:
            type: Exact
            value: "/metrics"
      backendRefs:
        - group: ''
          kind: Service
          name: kubernetes-dashboard-addon-chart-in-cluster-hub-api
          port: 8000
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard-web
  namespace: kubernetes-dashboard
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-http-gateway
      namespace: istio-ingress
  hostnames: []
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - group: ''
          kind: Service
          name: kubernetes-dashboard-addon-chart-in-cluster-hub-web
          port: 8000
          weight: 1
